# CadeiaDominial

./: .commit_msg_alteracao_ti.txt  .commit_msg_fix_null_check.txt  .commit_msg_matricula.txt  .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALISE_PROBLEMA_IMPORTACAO_MATRICULA_CARTORIO.md  BOOTSTRAP_PROGRESS.md  CHECKLIST_PRODUCAO_MATRICULA.md  CLEANUP_REPORT.md  COMANDOS_DEPLOY_DOCKER.txt  COMANDO_COMMIT_FINAL.sh  COMMIT_CHECKLIST.md  COMMIT_CONVENTION.md  COMMIT_PRINCIPAL_MATRICULA.sh  COMMIT_SECUNDARIO_DEV.sh  CONTRIBUTING.md  CORRECAO_BUSCA_CARTORIO.md  DATABASE_SCHEMA.md  DEPLOY_ALTERACAO_TI.md  DEPLOY_PRODUCAO_DOCKER.md  DEPLOY_PRODUCAO_FINAL.md  DEPLOY_PRODUCAO_RAPIDO.md  DESFAZER_MERGE.md  DETALHES_TECNICOS_CARTORIOS.md  DIAGNOSTICO_NGINX_UNHEALTHY.md  Dockerfile  LICENSE  MUST_TEST.md  NEXT_STEPS.md  PLAN.md  PLANO_REFORMULACAO_CARTORIOS.md  PRE_COMMIT_SETUP.md  PROGRESS.md  PRONTO_PARA_PRODUCAO.md  README.md  README_DEPLOY.md  README_DOCKER.md  (+49 more)
.claude/: AGENTS.md  CLAUDE.md  settings.json
analysis/: 01-code-quality-issues.md  02-refactoring-opportunities.md  03-testing-gaps.md  04-improvement-roadmap.md  05-test-coverage-detailed.md  README.md
cadeia_dominial/: settings.py  settings_export.py  settings_prod.py  urls.py  wsgi.py
context/: 01-project-overview.md  02-architecture.md  03-database-models.md  04-services.md  05-views-urls-api.md  06-frontend.md  07-core-features-workflows.md  08-configuration-deployment.md
docs/: ARCHITECTURE_DECISIONS.md  AUDIT_LOGGING_TODO.md  BUG_FIXES_SESSION_SUMMARY.md  CHECKLIST_VERIFICACAO_DUPLICATAS.md  CODEX_COMMANDS.md  CODE_REVIEW_ANALYSIS_2025.md  CODE_REVIEW_DUPLICATE_VERIFICATION.md  D1_IMPORT.md  D1_LOCAL_DEV.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_FLOW.mermaid  ERD_CADEIA_DOMINIAL.md  ESTRATEGIA_ALTERACAO_TI_ADMIN.md  FUNCIONALIDADE_AVISO_ORIGEM_EXISTENTE.md  INSTALLATION.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  ORGANIZACAO_DOCUMENTACAO.md  PLANEJAMENTO_VERIFICACAO_DUPLICATAS.md  PLANO_REFORMULACAO_CARTORIOS.md  README.md  README_DEPLOY_AUTOMATICO.md  RELATORIO_CARTORIOS_ATUAL.md  ROADMAP.md  SCHEMA_IMPROVEMENT_PROPOSAL.md  SCHEMA_V2_BLINDSPOT_REVIEW.md  SPEC_ORIGEM_PARSING_AND_CHAIN_CONNECTIVITY.md  TASKS.md  USER_GUIDE.md  deploy_debian.md  mermaid-config.json  react-flow.md
dominial/: README_REFATORACAO.md  __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py  (+1 more)
(+660 files in other folders)
