[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadeia-dominial"
version = "1.0.0"
description = "Sistema de Cadeia Dominial - Property ownership chain tracking for indigenous lands"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sistema de Cadeia Dominial Team"}
]

[tool.black]
line-length = 119
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip_gitignore = true
known_django = ["django"]
known_first_party = ["dominial", "cadeia_dominial"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cadeia_dominial.settings"
testpaths = ["dominial/tests"]
addopts = [
    "--strict-markers",
    "--cov=dominial",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=12",
    "--maxfail=5",
    "--tb=short",
    "-v",
    "--reuse-db",
    "--nomigrations",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (database, external services)",
    "e2e: End-to-end tests with Playwright (slow)",
    "slow: Slow tests (>1s)",
    "smoke: Quick smoke tests",
    "service: Service layer tests",
    "view: View layer tests",
    "model: Model layer tests",
    "frontend: Frontend/JavaScript tests",
]

[tool.coverage.run]
source = ["dominial"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["/tests", "/migrations"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]
